--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>Santas run</title>
     <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width initial-scale=1 maximum-scale=1 user- scalable=0 minimal-ui" />
     <style>
       body {
         margin: 0;
